<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar_back"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/action_bar"
        android:background="@color/line_driver"/>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar"
        android:layout_marginTop="1dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@mipmap/wi_fi"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:focusable="true">

            <EditText
                android:id="@+id/et_wifi_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/tv_change_net"
                android:background="@null"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="bottom"
                android:hint="@string/add_not_link_wifi"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_normal_black"
                android:textColorHint="@color/text_normal_gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_change_net"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="12dp"
                android:gravity="bottom"
                android:text="@string/ConnectionInfo_Button_ChangeWifi"
                android:textColor="@color/color_63BBF7"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_driver"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <EditText
                android:id="@+id/et_wifi_psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:gravity="bottom"
                android:hint="@string/ConnectionInfo_placeholder_WifiPwd"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_normal_black"
                android:textColorHint="@color/text_normal_gray"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/line_driver"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/login_tv_bg"
            android:gravity="center"
            android:text="@string/ActivateNetworking_Button_Title"
            android:textColor="@color/color_63BBF7"
            android:textSize="18sp"/>
    </LinearLayout>
</RelativeLayout>